--- a/index.html
+++ b/index.html
@@ -49,13 +49,17 @@
       <span class="small">by <a href="http://github.com/riaf">riaf</a></span></h1>
 
     <div class="description">
-      The IRC bot written by PHP
+      The IRC bot written in PHP
     </div>
 
     <h2>Authors</h2>
-<p>Keisuke SATO (riaf@nequal.jp)<br/><br/>      </p>
+<p>Keisuke SATO (riaf@nequal.jp)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Keisuke SATO (riaf@nequal.jp)<br/><br/>      </p>
+<p>Keisuke SATO (riaf@nequal.jp)
+<br/>
+<br/>      </p>
 
 
     <h2>Download</h2>
